<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingStart="30dp"
    android:paddingLeft="30dp"
    android:paddingEnd="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="30dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:gravity="top"
        android:lineSpacingExtra="2dp"
        android:textColor="#ff777575"
        android:textSize="25sp"
        android:textColorHint="#ff777575"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_hint" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:lineSpacingExtra="2dp"
        android:textColor="#ff777575"
        android:textSize="25sp"
        android:textColorHint="#ff777575"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass_hint"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:lineSpacingExtra="2dp"
        android:textColor="#ff777575"
        android:textSize="25sp"
        android:textColorHint="#ff777575"
        android:layout_centerHorizontal="true"
        android:hint="@string/mobile_hint"
        android:layout_below="@+id/pass"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:hint="@string/register_button_hint"
        style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
        android:textColor="#ff85d3ff"
        android:textSize="35sp"
        android:layout_below="@+id/mobile"
        android:layout_centerHorizontal="true" />

</RelativeLayout>